deployment/aws/cloudformation.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Legal Contract Chatbot - AWS CloudFormation Template'

Parameters:
  LMStudioAPIUrl:
    Type: String
    Default: http://192.168.0.4:1601
    Description: LM Studio API URL
  LMStudioModel:
    Type: String
    Default: qwen/qwen3-vl-4b
    Description: LM Studio Model Name
  
  InstanceType:
    Type: String
    Default: t3.medium
    Description: EC2 instance type
  
  MinInstances:
    Type: Number
    Default: 1
    Description: Minimum number of instances
  
  MaxInstances:
    Type: Number
    Default: 10
    Description: Maximum number of instances

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: ContractChatbotVPC

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: true

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: ContractChatbotIGW

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: ContractChatbotSG
      GroupDescription: Security group for Contract Chatbot
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8501
          ToPort: 8501
          CidrIp: 0.0.0.0/0
          Description: Streamlit port
      Tags:
        - Key: Name
          Value: ContractChatbotSG

  ECSCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: ContractChatbotCluster

  TaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Family: ContractChatbot
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      Cpu: '512'
      Memory: '1024'
      ContainerDefinitions:
        - Name: ContractChatbot
          Image: !Sub '${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/contract-chatbot:latest'
          PortMappings:
            - ContainerPort: 8501
              Protocol: tcp
          Environment:
            - Name: LM_STUDIO_API_URL
              Value: !Ref LMStudioAPIUrl
            - Name: LM_STUDIO_MODEL
              Value: !Ref LMStudioModel
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Ref LogGroup
              awslogs-region: !Ref AWS::Region
              awslogs-stream-prefix: ecs

  LogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: /ecs/contract-chatbot
      RetentionInDays: 7

  Service:
    Type: AWS::ECS::Service
    DependsOn: TaskDefinition
    Properties:
      ServiceName: ContractChatbotService
      Cluster: !Ref ECSCluster
      TaskDefinition: !Ref TaskDefinition
      DesiredCount: !Ref MinInstances
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          Subnets:
            - !Ref PublicSubnet
          SecurityGroups:
            - !Ref SecurityGroup

Outputs:
  ClusterName:
    Description: ECS Cluster Name
    Value: !Ref ECSCluster
    Export:
      Name: !Sub '${AWS::StackName}-ClusterName'
  
  ServiceName:
    Description: ECS Service Name
    Value: !Ref Service
    Export:
      Name: !Sub '${AWS::StackName}-ServiceName'
